--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>RestAPI</groupId>
-  <artifactId>RestAPI</artifactId>
+  <groupId>PageObjectModel_type</groupId>
+  <artifactId>PageObjectModel_type</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
   <dependencies>
@@ -11,15 +11,7 @@
         <artifactId>selenium-java</artifactId>
         <version>4.0.0</version>
     </dependency>
-    
-    <!-- RestAssured -->
-    <dependency>
-        <groupId>io.rest-assured</groupId>
-        <artifactId>rest-assured</artifactId>
-        <version>5.1.1</version>
-        <scope>test</scope>
-    </dependency>
-    
+        
     <!-- TestNG -->
     <dependency>
         <groupId>org.testng</groupId>
